updated css styling

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 # ----------------------- #
 
 url: http://steve-jansen.github.com
-title: Steve Jansen
-subtitle: hacking code and more
+title: /* steve jansen */
+subtitle: // another day in paradise hacking code and more
 author: Steve Jansen
 simple_search: http://google.com/search
 description:
