--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ titlecase: true       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [custom/asides/gravatar.html, custom/asides/about.html, asides/recent_posts.html, asides/github.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
+default_asides: [custom/asides/gravatar.html, custom/asides/about.html, asides/recent_posts.html, asides/github.html, custom/asides/stackoverflow.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
@@ -70,6 +70,10 @@ github_skip_forks: true
 
 # Gravatar  
 gravatar_email: stevejansen_github@icloud.com
+
+# Stack Overlfow: add your user name and user id (the user id is visible in the url of your s.o. profile page)
+stackoverflow_user_name: steve-jansen
+stackoverflow_user_id: 1995977
 
 # Twitter
 twitter_user:
