changed url to .io

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://steve-jansen.github.com
+url: http://steve-jansen.github.io
 title: /* steve jansen */
 subtitle: // another day in paradise hacking code and more
 author: Steve Jansen
